refactor everything into seperate files

--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bootstrap": "^3.3.6",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
-    "passport": "^0.3.2"
+    "passport": "^0.3.2",
+    "ui-router": "^1.0.0-alpha.3"
   },
   "devDependencies": {},
   "scripts": {
