--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "NHS Website",
   "main": "server.js",
   "dependencies": {
+    "angular": "^1.5.7",
+    "angular-ui-router": "^0.3.1",
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^3.3.6",
     "express": "^4.14.0",
