--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^3.3.6",
     "express": "^4.14.0",
+    "jquery": "<3.0.0",
     "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
