--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.14.0",
     "jquery": "<3.0.0",
     "jsonwebtoken": "^7.0.1",
+    "moment": "^2.14.1",
     "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
