--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "moment": "^2.14.1",
     "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
-    "passport": "^0.3.2",
-    "ui-router": "^1.0.0-alpha.3"
+    "passport": "^0.3.2"
   },
   "devDependencies": {},
   "scripts": {
