--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "angular": "^1.5.7",
+    "angular-ui-bootstrap": "^2.0.0",
     "angular-ui-router": "^0.3.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
