login lowercase on enter

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.6",
     "express": "^4.14.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^2.0.0",
     "jquery": "<3.0.0",
     "jsonwebtoken": "^7.0.1",
     "moment": "^2.14.1",
