--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.14.0",
     "grunt": "^1.0.1",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-uglify": "^2.0.0",
     "jquery": "<3.0.0",
     "jsonwebtoken": "^7.0.1",
