--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^3.3.6",
     "express": "^4.14.0",
     "grunt": "^1.0.1",
+    "grunt-angular-templates": "^1.1.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-uglify": "^2.0.0",
