--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hh-nhs",
   "version": "1.0.0",
   "description": "NHS Website",
-  "main": "Gruntfile.js",
+  "main": "server.js",
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
